<resources>
    <string name="app_name">Rosetta Drone</string>
    <string name="pref_drone_id">ID</string>
    <string name="pref_email1">Email Address 1</string>
    <string name="pref_email2">Email Address 2</string>
    <string name="pref_email3">Email Address 3</string>
    <string name="pref_email4">Email Address 4</string>
    <string name="pref_drone_rtl_cat">RTL/RTH</string>
    <string name="pref_drone_rtl_altitude">RTL altitude (meters)</string>
    <string name="pref_drone_smart_rtl">Enable smart RTL</string>
    <string name="pref_drone_max_height">Maximum height (meters)</string>
    <string name="pref_drone_heading_cat">Heading</string>
    <string name="pref_drone_heading">Heading mode</string>
    <string name="pref_drone_led_cat">Lights</string>
    <string name="pref_drone_leds">Enable forward LEDs</string>
    <string name="pref_drone_waypoint_cat">Waypoints</string>
    <string name="pref_drone_flight_path_mode">Flight path mode</string>
    <string name="pref_drone_flight_path_radius">Radius</string>
    <string-array name="drone_waypoint_array">
        <item>Curved</item>
        <item>Straight</item>
    </string-array>
    <string-array name="drone_waypoint_values_array">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_maptype_mode">Select map type</string>
    <string name="pref_maptype">Maps</string>
    <string-array name="maptype_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>None</item>
    </string-array>
    <string-array name="maptypet_values_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_drone_safety_cat">Safety</string>
    <string name="pref_drone_multi_mode">Enable multiple flight modes</string>
    <string name="pref_drone_collision_avoidance">Enable collision avoidance</string>
    <string name="pref_drone_upward_avoidance">Enable upward collision avoidance</string>
    <string name="pref_drone_landing_protection">Enable landing protection</string>
    <string-array name="drone_header_array">
        <item>Auto</item>
        <item>Control by RC</item>
        <item>Toward Point of Interest</item>
        <item>Initial Direction</item>
        <item>Waypoint Heading</item>
    </string-array>
    <string-array name="drone_header_values_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_remote_gcs">Use external device for GCS</string>
    <string name="pref_separate_gcs">Separate video address from GCS</string>
    <string name="pref_enable_video">Enable video feed</string>
    <string name="pref_enable_dualvideo">Enable second video feed on port+1</string>
    <string name="pref_gcs_ip">Host 1</string>
    <string name="pref_telem_port">Port 1</string>
    <string name="pref_ai_ip">AI Assist IP address</string>
    <string name="pref_ai_port">AI Assist port</string>
    <string name="pref_ai_telemetry">Enable AI Assist</string>
    <string name="pref_secondary_telemetry">Enable Telemetry 2</string>
    <string name="pref_secondary_telemetry_ip">Host 2</string>
    <string name="pref_secondary_telemetry_port">Port 2</string>
    <string name="pref_telemetry_3_enabled">Enable Telemetry 3</string>
    <string name="pref_telemetry_3_host">Host 3</string>
    <string name="pref_telemetry_3_port">Port 3</string>
    <string name="pref_telemetry_4_enabled">Enable Telemetry 4</string>
    <string name="pref_telemetry_4_host">Host 4</string>
    <string name="pref_telemetry_4_port">Port 4</string>
    <string name="pref_video_ip">Video IP address</string>
    <string name="pref_video_port">Video port</string>
    <string name="pref_video_bitrate">Video bitrate</string>
    <string name="pref_encode_speed">Video encoding speed</string>
    <string name="pref_app">App Name</string>
    <string name="pref_sim_pos_lat">Sim latitude</string>
    <string name="pref_sim_pos_lon">Sim longitude</string>
    <string name="pref_sim_pos_alt">Sim altitude</string>
    <string-array name="video_encode_array">
        <item>Ultra Fast</item>
        <item>Super Fast</item>
        <item>Very Fast</item>
        <item>Faster</item>
        <item>Fast</item>
        <item>Medium</item>
        <item>Slow</item>
        <item>Slower</item>
        <item>Very Slow</item>
    </string-array>
    <string-array name="video_encode_values_array">
        <item>20</item>
        <item>16</item>
        <item>14</item>
        <item>10</item>
        <item>8</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    	<item>0</item>
    </string-array>
    <string name="pref_log_messages">Log MAVLink messages</string>
    <string name="webrtc_settings">WebRTC Video</string>
    <string name="pref_enable_webrtc">Enable WebRTC vide streaming</string>
    <string name="pref_webrtc_signaling_address">WebRTC Signaling server address</string>
    <string name="pref_webrtc_stun_address">WebRTC STUN server address</string>
    <string name="dji">DJI</string>
    <string name="gcs">GCS</string>
    <string name="video">VIDEO</string>
    <string name="safety">SAFETY</string>
    <string name="safety_on">SAFETY ENABLED</string>
    <string name="safety_off">SAFETY DISABLED - READY TO FLY</string>
    <string name="safety_launch">Disable safety mode</string>
    <string name="hold">Please wait while image is grabbed!</string>
    <string name="ai_not_active">AI not activated in setup menu!</string>
    <string name="ai_uploaded_active">AI mission sent to AI module!</string>
    <string name="release">Report Sent!</string>
    <string name="settings">Settings</string>
    <string name="AIsettings">AI Settings</string>
    <string name="drone_settings">Drone Configuration</string>
    <string name="telemetry_settings">Telemetry</string>
    <string name="ai_settings">AI Assist</string>
    <string name="video_settings">Video</string>
    <string name="log_settings">Logs</string>
    <string name="options_clear_log">Clear Logs</string>
    <string name="options_download_log">Download Logs</string>
    <string name="options_help">Help &amp; feedback</string>
    <string name="options_map">Waypoints (old)</string>
    <string name="options_map_new">Waypoints</string>
    <string name="options_gui">Switch Logging</string>
    <string name="error_waypoint_min_altitude">A waypoint exists with an altitude below the minimum allowed by DJI (-200m).</string>
    <string name="error_waypoint_max_altitude">A waypoint exists with an altitude above the maximum allowed by DJI (500m).</string>
    <string name="error_waypoint_min_speed">The waypoint mission speed is below the minimum allowed by DJI (-15m/s).</string>
    <string name="error_waypoint_max_speed">The waypoint mission speed is above the maximum allowed by DJI (15m/s).</string>
    <string name="error_waypoint_distance">The maximum distance between a pair of waypoints exceeds the maximum allowed by DJI (500m). Intermediary waypoints have been added between these points.</string>
    <string name="error_waypoint_total_distance">The total waypoint path distance exceeds the maximum allowed by DJI (30,000m).</string>
    <string name="error_video_ip">Invalid IP address entered for Video IP. Enter a valid IP (0.0.0.0 – 255.255.255.255).</string>
    <string name="error_video_port">Invalid port entered for Video Port (0 – 65535).</string>
    <string name="error_video_bitrate">Invalid value entered for Video Bitrate (0 – 65535).</string>
    <string name="error_gcs_ip">Invalid IP address entered for GCS IP. Enter a valid IP (0.0.0.0 – 255.255.255.255).</string>
    <string name="error_gcs_port">Invalid port entered for GCS Port (0 – 65535).</string>
    <string name="error_drone_id">Invalid ID entered for the drone. Enter a valid ID (1 – 255).</string>
    <string name="error_flight_path_radius">Invalid radius entered for the drone flight path radius. Enter a valid radius (.2 – 1000).</string>
    <string name="error_rtl_altitude">Invalid altitude entered for the drone RTL altitude. Enter a valid altitude (20 – 500).</string>
    <string name="app_name_decoding_sample">Video Stream Decoding Sample</string>
    <string name="title_main_activity">Video Stream Decoding Sample</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="connection_sim">Status: Simulator Connected</string>
    <string name="model_not_available">Model Not Available</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="title_activity_demo">GSDemoActivity</string>
    <string name="google_app_id">Google_App_ID_String</string>
    <string name="uxsdk_user_login_widget_login">Login</string>
    <string name="uxsdk_fly_zone_unlock">Unlock</string>
      <string name="uxsdk_fly_zone_unlock_zone">Unlock %1$s</string>
      <string name="uxsdk_fly_zone_unlock_confirmation">By tapping Unlock, you agree that you have the authorization to operate in this fly zone. A record of this request will be linked to your DJI account. Tap Cancel to abort the operation.</string>
      <string name="uxsdk_fly_zone_unlock_end_time">Currently unlocked and expires at %1$s</string>
      <string name="uxsdk_fly_zone_unlock_failed_unauthorized">Failed to unlock. You are not authorized to unlock this zone.</string>
      <string name="uxsdk_fly_zone_unlock_failed">Failed to unlock. %1$s</string>
      <string name="uxsdk_fly_zone_warning">Warning</string>
      <string name="uxsdk_fly_zone_enhanced_warning">Enhanced warning</string>
      <string name="uxsdk_fly_zone_authorized">Authorized</string>
      <string name="uxsdk_fly_zone_restricted">Restricted</string>
      <string name="uxsdk_fly_zone_self_unlock">Self Unlock</string>
      <string name="uxsdk_fly_zone_custom_unlock">Custom Unlock</string>
      <string name="uxsdk_self_fly_zone_login_requirement">In order to unlock fly zones you must login with your DJI account. Tap Log in to continue logging in</string>
      <string name="uxsdk_fly_zone_custom_unlock_aircraft">Custom Unlock on Aircraft</string>
      <string name="uxsdk_fly_zone_custom_unlock_enabled">Custom Unlock Enabled</string>
   <string name="uxsdk_custom_fly_zone_duplicate">%1$s is currently enabled. Do you wish you disable it and enable %2$s</string>
   <string name="uxsdk_app_name">DJIUXSDK Beta</string>
   <string name="uxsdk_app_yes">Yes</string>
   <string name="uxsdk_app_no">No</string>
   <string name="uxsdk_app_ok">OK</string>
   <string name="uxsdk_app_save">Save</string>
   <string name="uxsdk_app_cancel">Cancel</string>
   <string name="uxsdk_error">Error</string>
   <string name="uxsdk_alert">Alert</string>
   <string name="uxsdk_success">Success</string>
   <string name="uxsdk_enable">Enable</string>
   <string name="uxsdk_disable">Disable</string>
   <string name="uxsdk_user_login_widget_logout">Logout</string>
   <string name="uxsdk_user_login_widget_refresh">Refresh</string>
   <string name="uxsdk_user_login_widget_token">Token out of date</string>
   <string name="uxsdk_user_login_widget_not_logged_in">Not Logged In.</string>
   <string name="uxsdk_user_login_widget_logged_in_authorized">Logged in and authorized to unlock flyzones.</string>
   <string name="uxsdk_user_login_widget_logged_in_not_authorized">Logged in but not authorized to unlock flyzones.</string>
   <string name="uxsdk_string_default_value">N/A</string>
   <string name="uxsdk_battery_percent">%1$d%%</string>
   <string name="uxsdk_battery_voltage_unit">%.2f V</string>
   <string name="uxsdk_gps_rtk_enabled">R</string>
   <string name="uxsdk_home_location_letter">H</string>
  <string name="uxsdk_unit_meters">m</string>
</resources>