<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_prefs"
    android:title="@string/settings">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_external_gcs"
        android:title="@string/pref_remote_gcs" />

    <PreferenceCategory
        android:key="drone_prefs"
        android:title="@string/drone_settings">

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="1"
            android:numeric="integer"
            android:key="pref_drone_id"
            android:title="@string/pref_drone_id" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="60"
            android:numeric="integer"
            android:key="pref_drone_rtl_altitude"
            android:title="@string/pref_drone_rtl_altitude" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_drone_smart_rtl"
            android:title="@string/pref_drone_smart_rtl"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_drone_leds"
            android:title="@string/pref_drone_leds"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_drone_collision_avoidance"
            android:title="@string/pref_drone_collision_avoidance"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_drone_upward_avoidance"
            android:title="@string/pref_drone_upward_avoidance"
            android:defaultValue="true" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_drone_landing_protection"
            android:title="@string/pref_drone_landing_protection"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="telemetry_prefs"
        android:title="@string/telemetry_settings">

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="127.0.0.1"
            android:dependency="pref_external_gcs"
            android:digits="0123456789."
            android:inputType="number"
            android:key="pref_gcs_ip"
            android:title="@string/pref_gcs_ip" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="14550"
            android:key="pref_telem_port"
            android:numeric="integer"
            android:title="@string/pref_telem_port" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="video_prefs"
        android:title="@string/video_settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_combined_gcs"
            android:dependency="pref_external_gcs"
            android:title="@string/pref_combined_gcs"
            android:defaultValue="false" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="127.0.0.1"
            android:dependency="pref_combined_gcs"
            android:digits="0123456789."
            android:inputType="number"
            android:key="pref_video_ip"
            android:title="@string/pref_video_ip" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="5600"
            android:key="pref_video_port"
            android:numeric="integer"
            android:title="@string/pref_video_port" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="log_prefs"
        android:title="@string/log_settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_log_mavlink"
            android:summary="May decrease performance due to volume of messages"
            android:title="@string/pref_log_messages" />

    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>

