<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/drone_details"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/drone_settings"
        android:maxLines="2"
        app:actionViewClass="android.widget.TextView"
        />
    <item
        android:id="@+id/action_safety"
        android:checkable="true"
        android:enabled="true"
        android:icon="@color/safety"
        android:orderInCategory="200"
        android:title="@string/safety"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download_logs"
        android:orderInCategory="501"
        app:showAsAction="never"
        android:title="@string/options_download_log" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="502"
        app:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="503"
        app:showAsAction="never"
        android:title="@string/options_help" />
    <item
        android:id="@+id/action_clear_logs"
        android:orderInCategory="504"
        app:showAsAction="never"
        android:title="@string/options_clear_log" />


</menu>